Adding in suggested maven opts to setup guide.